# all-in-one-mcp

./: .aiignore  .dockerignore  .editorconfig  .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  LEAN-CTX.md  Makefile  README.md  go.work  go.work.sum  renovate.json
mcp/credential-vault/: AI_GUIDE.md  README.md  SECURITY.md  cli.py  pyproject.toml  server.py  tui.py  vault
mcp/pr-reviewer/: AI_GUIDE.md  SECURITY.md  config.yaml  pyproject.toml  server.py
mcp/pr-reviewer/core/: audit.py  models.py  reviewer.py  secrets.py  validator.py
mcp/pr-reviewer/llm/: base.py  claude.py  gemini.py  openai.py
mcp/pr-reviewer/providers/: github.py  gitlab.py
mcp/pr-reviewer/tests/: conftest.py  test_integration_review.py  test_integration_webhook.py  test_models.py  test_providers.py  test_reviewer.py
mcp/pr-reviewer/tests/fixtures/: github_diff.diff  github_pr.json  gitlab_diff.diff  gitlab_mr.json  webhook_github.json  webhook_gitlab.json
mcp/pr-reviewer/webhook/: handlers.py  server.py
mcp/reasoning-memory/: .gitignore  .golangci.yml  AI_GUIDE.md  README.md  benchmark.py  config.yaml  eval.py  go.mod  go.sum  main.go  migrate.py  prompter.py  pyproject.toml  seed.py  server.py  store.py
mcp/reasoning-memory/bench/: .gitignore  bench_test.go  benchstat.sh  consolidation_quality_test.go  eval-protocol.md  polish_accuracy_test.go  retrieval_relevance_test.go  testdata_gen.go
mcp/reasoning-memory/bench/compare/: compare.go
mcp/reasoning-memory/bench/report/: gen_reports.go
mcp/reasoning-memory/bench/results/: consolidate.md  consolidation-quality.md  demo-episodes.json  fts5-search.md  insert-throughput.md  memory.md  polish-accuracy.md  relevance-ndcg.md  vector-search.md
mcp/reasoning-memory/internal/cli/: compact.go  dashboard.go  dashboard_test.go  doctor.go  stats.go
mcp/reasoning-memory/internal/config/: config.go  config_test.go
mcp/reasoning-memory/internal/models/: types.go
mcp/reasoning-memory/internal/prompter/: benchmark_test.go  detect.go  detect_test.go  prompter.go  prompter_test.go  skills.go  skills_test.go
mcp/reasoning-memory/internal/security/: redact.go  redact_test.go
mcp/reasoning-memory/internal/store/: benchmark_test.go  compaction.go  compaction_test.go  concepts.go  graph.go  labels.go  observability.go  observability_test.go  patterns.go  patterns_test.go  redaction_test.go  search.go  search_test.go  store.go  store_test.go  vector.go  vector_sqlite.go  vector_test.go
(+42 files in other folders)
