[project]
name = "pr-reviewer"
version = "0.1.0"
description = "Automated Pull/Merge Request Reviewer MCP server for GitHub and GitLab with Gemini or Claude analysis"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0",
    "pygithub>=2.0",
    "python-gitlab>=4.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
