[project]
name = "reasoning-memory"
version = "0.1.0"
description = "Reasoning Memory Network MCP server - captures, stores, and retrieves LLM reasoning traces"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
